[bumpversion]
commit = True
current_version = 0.3.0
files = asgi_sessions.py
tag = True
tag_name = {new_version}
message = build(version): {current_version} -> {new_version}

[metadata]
license_files = LICENSE

[tool:pytest]
addopts = -xsv

[pylama]
ignore = D

[tox:tox]
envlist = jwt1,jwt2

[testenv]
commands = py.test tests.py

[testenv:jwt1]
deps = 
	pyjwt<2
	-rrequirements-tests.txt

[testenv:jwt2]
deps = 
	pyjwt>=2
	-rrequirements-tests.txt
