[bumpversion]
commit = True
current_version = 0.8.3
files = asgi_sessions/__init__.py
tag = True
tag_name = {new_version}
message = build(version): {current_version} -> {new_version}

[wheel]
python-tag = py3

[metadata]
name = asgi-sessions
version = attr: asgi_sessions.__version__
url = https://github.com/klen/asgi-sessions
description = Signed Cookie-Based HTTP sessions for ASGI applications
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, trio, asgi, asgi sessions, cookies
project_urls = 
	Documentation = https://github.com/klen/asgi-sessions
	Source code = https://github.com/klen/asgi-sessions
	Issue tracker = https://github.com/klen/asgi-sessions/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = asgi_sessions
include_package_data = True
python_requires = >= 3.7

[options.package_data]
asgi_sessions = py.typed

[tool:pytest]
addopts = -xsv --mypy

[mypy]
ignore_missing_imports = True

[pylama]
ignore = D

[tox:tox]
envlist = py37,py38,py39,py310

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py
